--- a/Yelp-Camp-Solution/addition/addition.css
+++ b/Yelp-Camp-Solution/addition/addition.css
@@ -4,12 +4,23 @@ body{
     margin: 0px;
     padding: 0px;
     background-color: white;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;/* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar{
+    display: none;
+}
+
+body > * {
+    margin: 0px;
+    padding: 0px
 }
 
 .container{
     width: 90%;
     margin: auto;
-    padding: 0px;
 }
 
 .container .navbar{
@@ -106,13 +117,13 @@ form{
 
 .bottom{
     width: 90%;
-    height: 10vh;
-    margin: 0px;
-    padding: 0px;
+    margin: auto;
 }
 
 .bottom .btm-logo{
-    margin: 0px;
+    margin-top: 10vh;
+    margin-left: auto;
+    margin-right: auto;
     padding: 0px;
 }
 
