--- a/Yelp-Camp-Solution/camp/camp.css
+++ b/Yelp-Camp-Solution/camp/camp.css
@@ -11,6 +11,17 @@ body > *{
     padding: 0px;
 }
 
+#logout a{
+    text-decoration: none;
+    color: black;
+}
+
+.right-content > a{
+    text-decoration: none;
+    color: white;
+    background-color: black;
+}
+
 .container{
     width: 100%;
     margin: 0px;
