--- a/Yelp-Camp-Solution/landing-page/landing-page.css
+++ b/Yelp-Camp-Solution/landing-page/landing-page.css
@@ -7,6 +7,12 @@ body{
     display: flex;
 }
 
+button a{
+    text-decoration: none;
+    color: white;
+    font-size: 1em;
+}
+
 .information,
 .box{
     width: 50%;
