--- a/Yelp-Camp-Solution/search/search.css
+++ b/Yelp-Camp-Solution/search/search.css
@@ -16,6 +16,18 @@
     height: 5vh;
 }
 
+button a{
+    text-decoration: none;
+    font-size: 1.5rem;
+    color: white;
+}
+
+#logout > a{
+    color: rgb(110, 105, 105);
+    font-family: sans-serif;
+    font-size: 1rem;
+}
+
 .top-section button{
     background-color: black;
     color: white;
